# quader

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  changelog.md  dev-changelog.md  project_board.md  project_board_archive.md
agents/: code-style.md  documentation-policy.md  hindsight.md  task_board.md  tests-policy.md  workflow.md
agents/architecture/: architecture.md  renderer.md  ui.md
agents/archive/: audit_20260704_full_architecture_renderer.md  audit_20260704_full_architecture_ui.md  implementation_task10_io_asset_boundaries_doc.md  implementation_task11_diagnostics_performance_golden_renderer_doc.md  implementation_task11_ui_diagnostics_panel_ui_doc.md  implementation_task23_reference_box_tool.md  implementation_task8_ui_models_panels_ui_doc.md  implementation_task9_crimson_v1_correctness_renderer_doc.md  implementation_wave1_a3_foundation_document_command_preflight_doc.md  implementation_wave1_a4_ui_preflight_ui_doc.md  implementation_wave1_a5_renderer_preflight_renderer_doc.md  legacy_quader_custom_agents_workflow_20260705.md
agents/plans/: audit_20260704_full_architecture_master.md  audit_20260704_full_architecture_software.md  audit_20260706_current_code_master.md  implementation_20260706_overlay_grid_material_parity.md  implementation_task13_godot_style_transform_gizmos.md  implementation_task17_openmesh_mesh_core_doc.md  implementation_task25_overlay_parity_rework.md  implementation_task26_default_albedo_pbr_material.md  implementation_task27_viewport_regression_cluster.md  implementation_task28_current_code_audit_remediation.md  implementation_task29_viewport_background_grid_defaults.md  implementation_task30_current_audit_beautify_findings.md  intake_20260705_mesh_selection_overlays_core.md  intake_20260705_mesh_selection_overlays_final.md  intake_20260705_mesh_selection_overlays_renderer.md  intake_20260705_mesh_selection_overlays_ui.md  intake_mesh_component_selection_ui.md  task25_source_wire_stamp_visibility_rework_07_07_2026_0800.md  task_intake_20260705_mesh_component_selection_renderer.md  task_intake_20260705_selection_parity_core.md
agents/reference/: documentation-policy-full.md  tests-policy-full.md
agents/reviews/: 25_quader-ui-architect_review_07_07_2026_0912.md  25_quader-ui-architect_review_07_07_2026_0931.md  README.md
benchmarks/: benchmark_main.cpp  benchmark_main.hpp  crimson_packet_pipeline_bench.cpp  crimson_upload_bench.cpp
build_tools/: compile_shaders.py  validate_shader_manifest.py
docs/: Doxyfile  mainpage.md  windows-overlay-parity-reference.md
docs/html/: aabb_8hpp.html  aabb_8hpp.js  aabb_8hpp_source.html  action__id_8cpp.html  action__id_8cpp.js  action__id_8cpp_source.html  action__id_8hpp.html  action__id_8hpp.js  action__id_8hpp_source.html  action__registry_8cpp.html  action__registry_8cpp.js  action__registry_8cpp_source.html  action__registry_8hpp.html  action__registry_8hpp.js  action__registry_8hpp_source.html  action__state__updater_8cpp.html  action__state__updater_8cpp_source.html  action__state__updater_8hpp.html  action__state__updater_8hpp.js  action__state__updater_8hpp_source.html  annotated.html  annotated_dup.js  app__services_8hpp.html  app__services_8hpp.js  app__services_8hpp_source.html  application_8cpp.html  application_8cpp_source.html  application_8hpp.html  application_8hpp.js  application_8hpp_source.html  application__config_8hpp.html  application__config_8hpp.js  application__config_8hpp_source.html  assert_8hpp.html  assert_8hpp.js  assert_8hpp_source.html  backend__capability__tests_8cpp.html  backend__capability__tests_8cpp_source.html  base__shader_8cpp.html  base__shader_8cpp.js  (+2000 more)
shaders/: fs_cube.sc  fs_grid.sc  manifest.json  overlay_device_solid.vs.sc  overlay_edit_line.fs.sc  overlay_edit_line.vs.sc  overlay_line.fs.sc  overlay_line.vs.sc  overlay_solid.fs.sc  overlay_unlit.fs.sc  overlay_unlit.vs.sc  varying.def.sc  vs_cube.sc  vs_grid.sc
shaders/common/: color_space.sh
shaders/pbr/: alpha_cutout_pbr.fs.sc  opaque_pbr.fs.sc  opaque_pbr.vs.sc  transparent_pbr.fs.sc  transparent_pbr.vs.sc  unlit_surface.fs.sc
shaders/picking/: picking.fs.sc  picking.vs.sc
shaders/post/: fullscreen_triangle.vs.sc  present.fs.sc  tone_map.fs.sc
src/: main.cpp
src/app/: app_services.hpp  application.cpp  application.hpp  application_config.hpp
src/commands/: command.cpp  command.hpp  command_history.cpp  command_history.hpp  command_result.cpp  command_result.hpp  document_commands.cpp  document_commands.hpp  selection_commands.cpp  selection_commands.hpp
src/crimson/: native_surface.hpp  prototype_viewport.hpp  renderer.cpp  renderer.hpp  renderer_config.hpp  renderer_diagnostics.hpp  renderer_types.hpp  viewport_frame.hpp
src/document/: document.cpp  document.hpp  document_error.hpp  document_events.hpp  material.hpp  object_id.hpp  object_store.cpp  object_store.hpp  scene_object.hpp  selection.cpp  selection.hpp  transform.hpp
src/foundation/: assert.hpp  diagnostic.hpp  id.hpp  logging.cpp  logging.hpp  result.hpp
src/geometry/: normals.hpp  predicates.hpp
src/io/: document_fragment_validator.cpp  document_fragment_validator.hpp  export_options.hpp  export_service.cpp  export_service.hpp  exporter.hpp  file_format.hpp  import_export_registry.cpp  import_export_registry.hpp  import_options.hpp  import_service.cpp  import_service.hpp  imported_document.hpp  importer.hpp  io_diagnostic.cpp  io_diagnostic.hpp  io_error.hpp
src/math/: aabb.hpp  scalar.hpp  vec2.hpp  vec3.hpp
src/tools/: box_tool.cpp  box_tool.hpp  editor_input_event.hpp  tool.cpp  tool.hpp  tool_context.cpp  tool_context.hpp  tool_id.hpp  tool_manager.cpp  tool_manager.hpp  tool_preview.cpp  tool_preview.hpp  transform_gizmo_tool.cpp  transform_gizmo_tool.hpp
tests/golden_images/: README.md
tests/render_tests/: golden_image.cpp  golden_image.hpp  golden_image_compare_tests.cpp  render_test_scene.cpp  render_test_scene.hpp
tools/: check_architecture.py  check_clang_format.py  check_clang_tidy.py  dev_builds.py  project_board.py
(+407 files in other folders)
